Bug 488937 - Micro-optimization: avoid useless instantiations
Change-Id: Ib0ecc7d414cc0b48792cfef9372b5daeb1d28fbd
Signed-off-by: Mickael Istria <mistria@redhat.com>